--- a/github/workflows/publish-to-pypi.yml
+++ b/github/workflows/publish-to-pypi.yml
@@ -12,7 +12,8 @@ jobs:
       id-token: write
 
     steps:
-      - uses: actions/checkout@v
+      # CORREÇÃO AQUI:
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
